Measure tool operating incorrectly in Wireframe mode (Windows, multiple Blender versions). #105664

Closed
opened 2023-03-11 18:10:34 +01:00 by Karin-Steffner · 5 comments

OS:
Windows 10

Blender Version:
Blender 3.3.4 LTS, 3.4.1 and as well experimental 3.6.0.

When enabling global vertex snapping, in Solid Display, the Measure tool works ok. I can LMB snap to a start vertex and drag to an end vertex, release mouse button and the correct length will be displayed.

However, changing to Wireframe mode (no X-ray), when using the Measure tool, the tool "appears" to behave correctly (same apparent behaviour as in Solid mode), but the start vertex will NOT be snapped to, only the end vertex will.

Attempting to activate snapping using CTRL when using Measure tool (note: with global snapping still on) seem to prohibit snapping (toggles snapping OFF?).

If I turn off global snapping, and instead use CTRL (when using the Measure tool) to activate snapping, then it again appears to snap to the first and last selected vertex. But - in fact - the same problem is present, only the end vertex is snapped to. The start vertex is never snapped to.

Test case: Test on Mesh Cube.

OS: Windows 10 Blender Version: Blender 3.3.4 LTS, 3.4.1 and as well experimental 3.6.0. When enabling global vertex snapping, in Solid Display, the Measure tool works ok. I can LMB snap to a start vertex and drag to an end vertex, release mouse button and the correct length will be displayed. However, changing to *Wireframe mode* (no X-ray), when using the Measure tool, the tool "appears" to behave correctly (same apparent behaviour as in Solid mode), but the start vertex will NOT be snapped to, only the end vertex will. Attempting to activate snapping using CTRL when using Measure tool (note: with global snapping still on) seem to *prohibit* snapping (toggles snapping OFF?). If I *turn off global* snapping, and instead use CTRL (when using the Measure tool) to activate snapping, then it again *appears* to snap to the first and last selected vertex. But - in fact - the same problem is present, only the end vertex is snapped to. The start vertex is never snapped to. Test case: Test on Mesh Cube.
Karin-Steffner added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-11 18:10:35 +01:00

Ctrl is a shortcut for "Snap Invert". If toogle is ON, Ctrl inverts turning snapping OFF. If toggle is OFF, Ctrl inverts turning snapping ON. It's by design.

But I noticed apparently undesirable behavior in snap in wireframe mode. Snap to Face prevents snapping to behind elements. This must be the problem you wanted to report and in fact it is a bug.

Investigating...

`Ctrl` is a shortcut for "Snap Invert". If toogle is ON, Ctrl inverts turning snapping OFF. If toggle is OFF, Ctrl inverts turning snapping ON. It's by design. But I noticed apparently undesirable behavior in snap in wireframe mode. Snap to Face prevents snapping to behind elements. This must be the problem you wanted to report and in fact it is a bug. Investigating...
Germano Cavalcante added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-03-13 18:10:37 +01:00
Author

I was not aware that Ctrl was meant to invert snapping, I thought Ctrl was meant to enable snapping. But this is not the important issue.

I do not see this as a problem related to "snapping to behind elements". But it could be the same thing?
Consider:
Case tested using Blender 3.4.1:
Starting Blender from scratch, a mesh cube is displayed. Click away splash screen. (We are in now Object mode.)
Activate Wireframe. (I see that X-ray also simultaneously turns on when I hit the Wireframe shading icon.)
Select Measure tool, hold down Ctrl (to allow snapping, and the small ring cursor appears when near cube corners indicating snapping action) and LMB drag from on cube corner to another.
Rotate the cube a little and observe that the measuring line has only snapped to the end cube corner (not the start corner.)
(If I deactivate X-ray, we still have the same issue.)
(If I now Tab into Edit mode, we still have the same issue.)

BTW.
Consider the reporting about simultaneous X-ray activation, stated above:
When having freshly started Blender, X-ray is initially OFF.
When activating Wireframe, then X-ray is also simultaneously toggled ON (without me explicitely hitting the icon).
Note: This happens only the very first time activating Wireframe after Blender startup.
Why this behaviour, seems a bit illogical to me...

I was not aware that Ctrl was meant to *invert* snapping, I thought Ctrl was meant to *enable* snapping. But this is *not* the important issue. I do not see this as a problem related to "snapping to behind elements". But it could be the same thing? Consider: Case tested using Blender 3.4.1: Starting Blender from scratch, a mesh cube is displayed. Click away splash screen. (We are in now Object mode.) Activate Wireframe. (I see that X-ray also simultaneously turns on when I hit the Wireframe shading icon.) Select Measure tool, hold down Ctrl (to allow snapping, and the small ring cursor appears when near cube corners indicating snapping action) and LMB drag from on cube corner to another. Rotate the cube a little and observe that the measuring line has only snapped to the *end* cube corner (not the *start* corner.) (If I deactivate X-ray, we still have the same issue.) (If I now Tab into Edit mode, we still have the same issue.) BTW. Consider the reporting about *simultaneous* X-ray activation, stated above: When having freshly started Blender, X-ray is initially OFF. When activating Wireframe, then X-ray is also *simultaneously* toggled ON (without me explicitely hitting the icon). Note: This happens only the *very first time* activating Wireframe after Blender startup. Why this behaviour, seems a bit illogical to me...

observe that the measuring line has only snapped to the end cube corner (not the start corner.)

I can't understand what you mean.

Note that I still think you are referring to the problem I mentioned in my first comment (about Snap to Face preventing snapping to behind elements).

Note that there has recently been a fix on this (See 98bfa8d458)

Please try the latest daily build: https://builder.blender.org/download/

> observe that the measuring line has only snapped to the end cube corner (not the start corner.) I can't understand what you mean. Note that I still think you are referring to the problem I mentioned in my first comment (about Snap to Face preventing snapping to behind elements). Note that there has recently been a fix on this (See 98bfa8d4589cae47d0b7ae9ff576a9acca91ab88) Please try the latest daily build: https://builder.blender.org/download/
Author

I just downloaded and installed the latest daily build for Blender 3.4.1. The problem is still very much present.
It is hard for me to understand why you "can't understand" when you do not explain further, did you try the exact steps I outlined?
Please look at the screen capture enclosed. At the very end I rotated the cube, and you can see that one end of the measurement line did not snap. This is the problem.

I just downloaded and installed the latest daily build for Blender 3.4.1. The problem is still very much present. It is hard for me to understand why you "can't understand" when you do not explain further, did you try the *exact* steps I outlined? Please look at the screen capture enclosed. At the very end I rotated the cube, and you can see that one end of the measurement line did not snap. This is the problem.

Thanks for the video. I can confirm the problem.

Note that 3.4.1 no longer receives bug fixes. For now the ones receiving fixes are 3.5 or higher or one of the LTS (Long Term Support). See https://projects.blender.org/milestones

Thanks for the video. I can confirm the problem. Note that 3.4.1 no longer receives bug fixes. For now the ones receiving fixes are 3.5 or higher or one of the LTS (Long Term Support). See https://projects.blender.org/milestones
Germano Cavalcante added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-03-15 19:40:17 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-15 21:13:00 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105664
No description provided.